<resources>
    <string name="acc">Acc</string>
    <string name="app_name">iNaturalist</string>
    <string name="google_login">Login with Google</string>
    <string name="email_address">Email Address</string>
    <string name="observations_menu_add">Add</string>
    <string name="observations_menu_sync">Sync</string>
    <string name="delete_observation">Delete observation</string>
    <string name="observation_deleted">Observation deleted</string>
    <string name="species_guess_hint">Species name...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="sync_required">Sync required</string>
    <string name="sync_required_message">%1$d observations, %2$d photos to sync</string>
    <string name="street">Street</string>
    <string name="satellite">Satellite</string>
    <string name="couldnt_load_nearby_observations">Couldn\'t load nearby observations: %1$s</string>
    <string name="found_observations">Found %1$d observations</string>
    <string name="ready_to_signup">Ready to sign up?</string>
    <string name="about_to_signup">You\'re about to visit iNaturalist.org, where you can sign up for a new account. Once you\'ve confirmed your new account by clicking the link in the confirmation email you\'ll receive, you can come back here to enter your username and password.</string>
    <string name="username_invalid">Username or password was invalid, please sign in again.</string>
    <string name="signed_in_as">Signed in as %1$s</string>
    <string name="signing_in">Signing in...</string>
    <string name="signed_in">Signed in!</string>
    <string name="signed_in_failed">Sign in failed!</string>
    <string name="username_cannot_be_blank">Username and password cannot be blank</string>
    <string name="syncing_observations">Syncing observations...</string>
    <string name="syncing_x_observations">Syncing %1$d observations...</string>
    <string name="syncing">Syncing...</string>
    <string name="updating_observations">Updating observations...</string>
    <string name="updating_x_observations">Updating %1$d of %2$d existing observations...</string>
    <string name="posting_observations">Posting new observations...</string>
    <string name="posting_x_observations">Posting %1$d of %2$d new observations...</string>
    <string name="observation_sync_complete">Observation sync complete</string>
    <string name="observation_sync_status">%1$d new, %2$d updated.</string>
    <string name="sync_complete">Sync complete!</string>
    <string name="posting_photos">Posting new photos...</string>
    <string name="posting_x_photos">Posting %1$d of %2$d new photos...</string>
    <string name="photo_sync_complete">Photo sync complete</string>
    <string name="posted_new_x_photos">Posted %1$d new photos.</string>
    <string name="error_couldnt_connect_to_server">Couldn\'t connect to server.</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="please_sign_in_description">Please sign in to your iNaturalist account or sign up for a new one.</string>
    <string name="photo_not_specified">Photo not specified</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="image_saved">Image saved</string>
    <string name="something_went_wrong">Blast, something went wrong: %1$s</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="current_position">Current position</string>
    <string name="you_are_here">You are here!</string>
    <string name="oh_no">Oh no! %1$s</string>
    <string name="need_to_login">You need to log in to view your feed.  Log in now?</string>
    <string name="observations">Observations</string>
    <string name="observations_description">Observations list</string>
    <string name="map">Map</string>
    <string name="map_description">Observations map</string>
    <string name="updates">Updates feed</string>
    <string name="updates_description">Updates from people you follow on iNat</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Sign in/out</string>
    <string name="processing">Processing...</string>
    <string name="projects">Projects</string>
    <string name="projects_description">Projects</string>
    <string name="delete_photo">Delete photo</string>
    <string name="menu">Menu</string>
    <string name="layers">Layers</string>
    <string name="my_location">My location</string>
    <string name="nearby_observations">Nearby observations</string>
    <string name="add">Add</string>
    <string name="view_on_inat">View on iNat</string>
    <string name="reload">Reload</string>
    <string name="view_in_browser">View in browser</string>
    <string name="add_observation">Add observation</string>
    <string name="take_picture">Take picture</string>
    <string name="add_photo">Add photo</string>
    <string name="save">Save</string>
    <string name="no_observations_yet">No observations yet!</string>
    <string name="sign_in_to_inat">Sign in to your iNaturalist account</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="create_new_account">Create new account</string>
    <string name="signed_in_as_plain">Signed in as</string>
    <string name="signed_out">Sign out</string>
    <string name="view">View</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="unknown">Unknown</string>
    <string name="brief_description">Brief description...</string>
    <string name="unknown_species">Unknown species</string>
    <string name="no_description">No description</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="pull_to_sync">Pull to sync...</string>
    <string name="release_to_sync">Release to sync...</string>
    <string name="edit_observation">Edit Observation</string>
    <string name="discard_changes">Are you sure you want to discard unsaved changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="agree">Agree?</string>
    <string name="no_comments">No comments/identifications yet</string>
    <string name="posted_by">Posted by %1$s on %2$s</string>
    <string name="you">you</string>
    <string name="loading_comments">Loading comments and identifications...</string>
    <string name="add_comment">Add comment</string>
    <string name="add_id">Add identification</string>
    <string name="remarks">Remarks...</string>
    <string name="change">Change</string>
    <string name="no_taxon_found">No taxon found</string>
    <string name="enter_taxon_name">Enter taxon name</string>
    <string name="no_projects">No projects found!</string>
    <string name="no_guides">No guides found!</string>
    <string name="loading_projects">Loading projects...</string>
    <string name="joined_projects">Joined</string>
    <string name="nearby_projects">Nearby</string>
    <string name="featured_projects">Featured</string>
    <string name="project_details">Project Details</string>
    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="project_taxa">Project Check List</string>
    <string name="loading_check_list">Loading Check List...</string>
    <string name="no_check_list">No Taxa in Check List!</string>
    <string name="failed_to_add_obs_to_project">Failed to add observation \'%1$s\' to project \'%2$s\': %3$s</string>
    <string name="invalid_project_field">Please enter a valid value for field \'%1s\'</string>
    <string name="id_please">Need ID help?</string>
    <string name="select_projects">Select Projects</string>
    <string name="could_not_load_comments">Couldn\'t load comments/IDs - observation was probably deleted on website</string>
    <string name="not_connected">You must be connected to the Internet in order to do that!</string>
    <string name="search_projects">Search projects...</string>
    <string name="search_guides">Search guides...</string>
    <string name="save_observation">Save observation</string>
    <string name="about">About</string>
    <string name="check_list">Check list</string>
    <string name="gps">GPS</string>
    <string name="geoprivacy">Geoprivacy</string>
    <string name="comments_ids">Comments and Identifications</string>
    <string name="delete_confirmation">Are you sure you want to delete this observation?</string>
    <string name="view_on_inat_confirmation">View this observation in a browser?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="tutorial_link">Help with iNaturalist</string>
    <string name="guides">Guides</string>
    <string name="guides_description">Guides</string>
    <string name="my_guides">Yours</string>
    <string name="nearby_guides">Nearby</string>
    <string name="all_guides">All</string>
	<string name="language_settings">Language settings</string>
	<string name="locale_gl">Galician</string>
	<string name="locale_eu">Basque</string>
	<string name="use_device_language_settings">Use device language settings</string>
    <string name="contact_support"><![CDATA[<a href="mailto:help@inaturalist.org">Contact support</a>]]></string>
    <string name="credits">Designed and built by iNaturalist.org with support from the California Academy of Sciences</string>
    <string name="inat_network_settings">iNaturalist Network Settings</string>
</resources>