<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu"
        android:alphabeticShortcut="m"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu"/>

    <item
        android:id="@+id/layers"
        android:alphabeticShortcut="l"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/layers"/>
    
    <item
        android:id="@+id/nearby"
        android:alphabeticShortcut="n"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nearby_observations"/>
    
    <item
        android:id="@+id/add"
        android:alphabeticShortcut="a"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"/>

</menu>