<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.inaturalist.android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
  <LinearLayout
    android:id="@+id/top_actionbar"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/actionbar_height"
    android:orientation="horizontal"
    >
    <ImageButton
	    android:id="@+id/back"
	    android:background="@drawable/actionbar_btn"
	    android:layout_centerVertical="true"
	    android:singleLine="true"
	    android:src="@drawable/back"
	    style="@style/ActionBarItem"
	    />
    
    <RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_weight="1"
	    android:layout_height="fill_parent"
	    android:background="@drawable/actionbar_btn"
	    style="@style/ActionBarItem"
	    android:padding="0dp"
        >
	      <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
   	        android:layout_centerInParent="true"
	          >
	      <TextView 
	          android:text="@string/project_details"
   		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:paddingLeft="3dp"
		      android:textSize="18dp"
		      android:layout_gravity="center_vertical"
	          />
	      </LinearLayout>
	        
    </RelativeLayout>
    
    <Button
	    android:id="@+id/join_leave_project"
	    android:background="@drawable/actionbar_btn"
	    android:layout_centerVertical="true"
	    android:singleLine="true"
	    android:text="@string/join"
	    style="@style/ActionBarItem"
	    />
 
</LinearLayout>


        
 
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:orientation="horizontal"
    >
    <ImageView
	    android:id="@+id/project_pic"
	    android:layout_height="fill_parent"
	    android:layout_width="48dp"
	    />
    
	 <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    >
	    <TextView 
	        android:id="@+id/project_title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="my title"
	        />
	    
   	    <TextView 
	        android:id="@+id/project_details_taxa"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/project_taxa"
	        />
    </LinearLayout>
</LinearLayout>
    

<ScrollView
    android:id="@+id/project_description_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    >

    <TextView 
        android:id="@+id/project_description"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="my description"
        />
</ScrollView>

<RelativeLayout
    android:id="@+id/project_check_list_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<ListView
	    android:id="@+id/project_check_list"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    />
   	    
	<TextView 
	    android:id="@+id/project_taxa_empty"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/loading_check_list"
	    android:layout_centerInParent="true"
	    />
</RelativeLayout>

</LinearLayout>
