<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
   
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentBottom="true"
        >
        
     <RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_weight="1"
	    android:layout_height="fill_parent"
	    android:background="@drawable/actionbar_join_btn"
	    style="@style/ActionBarItem"
	    android:padding="0dp"
        >
	      <Button
		    android:id="@+id/add_comment"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="@drawable/actionbar_join_btn"
		    style="@style/ActionBarItem"
		    />
	      
	      <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
   	        android:layout_centerInParent="true"
	          >
   	      <ImageView 
	          android:src="@drawable/save_observation"
   		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
	          />

	      <TextView 
	          android:text="@string/add_comment"
   		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:paddingLeft="3dp"
		      android:textSize="18dp"
		      android:layout_gravity="center_vertical"
	          />
	      
	      </LinearLayout>
      </RelativeLayout>
      
      <RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_weight="1"
	    android:layout_height="fill_parent"
	    android:background="@drawable/actionbar_join_btn"
	    style="@style/ActionBarItem"
	    android:padding="0dp"
        >
	      <Button
		    android:id="@+id/add_id"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="@drawable/actionbar_join_btn"
		    style="@style/ActionBarItem"
		    />
	      
	      <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
   	        android:layout_centerInParent="true"
	          >
   	      <ImageView 
	          android:src="@drawable/save_observation"
   		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
	          />

	      <TextView 
	          android:text="@string/add_id"
   		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:paddingLeft="3dp"
		      android:textSize="18dp"
		      android:layout_gravity="center_vertical"
	          />
	      
	      </LinearLayout>
      </RelativeLayout>
          
    </LinearLayout>
    
     <ListView
        android:id="@android:id/list"
        android:layout_above="@id/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"/>
        
    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="30dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/no_comments" />

</RelativeLayout>
